<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    
    <!--////////////////////////////// MainActivity ///////////////////////////////////////////-->

    <string name="my_nanodegree_apps">My Nanodegree Apps!</string>
    <string name="button_will_launch_app">This button will launch my&#160;</string>

    <!-- App Names -->
    <string name="spotify_streamer_app">Spotify Streamer App</string>
    <string name="scores_app">Scores App</string>
    <string name="library_app">Library App</string>
    <string name="build_it_bigger_app">Build it bigger App</string>
    <string name="xyz_reader_app">XYZ Reader App</string>
    <string name="capstone_my_own_app">Capstone: My Own App</string>
    <string name="title_activity_spotify_main">SpotifyMainActivity</string>

    <!--/////////////////////////// SpotifyMainActivity //////////////////////////////////////-->
    <string name="spotify_streamer">Spotify Streamer</string>
    <string name="search_hint">Artist Name</string>
    <string name="top_tracks">Top 10 Tracks</string>
    <string name="nothing_playing">Nothing Playing</string>

    <!--/////////////////////////// SpotifyMainFragment //////////////////////////////////////-->
    <string name="must_insert_artirs_message">You must insert an artist name</string>
    <string name="no_artists_found">No artists found with this name</string>
    <string name="search">Search</string>
    <string name="title_activity_spotify_activity_top_tracks">SpotifyActivityTopTracks</string>
    <string name="spotify_share_string">Hey, I am listening the song \"%1$s\" from %2$s, do you want to listen it? This is the link:\n%3$s</string>

    <!--/////////////////////////// SpotifyPlayActivity //////////////////////////////////////-->
    <string name="title_activity_spotify_play">SpotifyPlayActivity</string>
    <string name="zero_time">0:00</string>
    <string name="final_time">0:30</string>
    <string name="IO_exception_media_stream">url invalid or empty</string>
    <string name="action_play">Play</string>
    <string name="action_previous">Previous</string>
    <string name="action_next">Next</string>

    <!--/////////////////////////// Spotify Menu Options //////////////////////////////////////-->
    <string name="action_now_playing">Now Playing</string>
    <string name="action_share">Share</string>

    <!--/////////////////////////// Spotify Preferences ///////////////////////////////////////-->
    <string name="pref_country_key" translatable = "false">spotify_country_key</string>
    <string name="pref_country_label" translatable = "false">Country code</string>
    <string name="pref_country_default" translatable = "false">US</string>
    <string name="pref_enable_notifications_key" translatable = "false">notifications</string>
    <string name="pref_enable_notifications_label" translatable = "false">Show Notifications</string>
    <string name="pref_enable_notifications_false" translatable = "false">Not Enabled</string>
    <string name="pref_enable_notifications_true" translatable = "false">Enabled</string>
    <string name="pref_enable_notifications_default" translatable = "false">true</string>
    <string name="title_activity_spotify_settings">Settings</string>

</resources>