<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.almareng.appportfolio.SpotifyMainActivity">

    <item android:id="@+id/action_share"
        android:title="@string/action_share"
        app:showAsAction="ifRoom"
        android:visible="false"
        app:actionProviderClass="android.support.v7.widget.ShareActionProvider"/>

    <item android:id="@+id/action_now_playing"
        android:title="@string/action_now_playing"
        android:icon="@android:drawable/ic_media_play"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />
</menu>
